# rust-coding-exercise

./: .gitignore  README.md  async_fut_exp_in_200_6_impl.rs  async_fut_exp_in_200_lines_5_gen.rs  async_in_rust_31_async_await.rs  async_in_rust_33_generator.rs  async_in_rust_34_fsm.rs  bili_danhuang_iter_iter_mut_into_iter_demo.rs  bili_danhuang_rust_prj_10_tcp_server_client.rs  bili_danhuang_rust_prj_11_http_server.rs  bili_danhuang_rust_prj_12_udp_chat.rs  bk_ch09_error_0903.rs  bk_ch09_error_0904.rs  bk_ch09_error_0905_02.rs  bk_ch09_error_0905_03.rs  bk_ch09_error_0907.rs  bk_ch09_error_0908.rs  bk_ch10_generic_1001.rs  bk_ch10_generic_1003.rs  bk_ch10_generic_1009.rs  bk_ch10_generic_1013.rs  bk_ch10_generic_1016.rs  bk_type-4-casts.rs  bk_type-str.rs  compile-run-rs.sh  ex_01_1-comments.rs  ex_01_2_0-formatted-print.rs  ex_01_2_1-debug.rs  ex_02_0-primitives.rs  ex_02_1-literals-operators.rs  ex_03_1-structures.rs  ex_03_2_2-c-like.rs  ex_03_3-constants.rs  ex_04_1-mutability.rs  ex_04_2-scope-shadowing.rs  ex_04_4-freezing.rs  ex_05_2-literals.rs  ex_05_3-inference.rs  ex_05_4-aliasing.rs  ex_06_1-from-into.rs  (+109 more)
ab_1_3_async_await/: Cargo.toml
async_in_rust_31_async_await_move/: Cargo.toml
bili_async_intro_ms_yangxu/: Cargo.toml
bili_danhuang_rust/: bili_danhuang_rust_adv_06_closure.rs
bk_ch11_test/: Cargo.toml
bk_ch12_cmdline_minigrep/: poem.txt
bk_ch20_prj_webserver/: Cargo.toml
bk_ch20_prj_webserver/src/: lis2001.rs  lis2002.rs  lis2003.rs  lis2005.rs  lis2006.rs  lis2007.rs  lis2009.rs
bk_the_book_trpl/: bk_ch09_error_0900.rs  bk_ch09_error_0901.rs  bk_ch09_error_0905_01.rs  bk_ch09_error_0906.rs  bk_ch09_error_0909_01.rs  bk_ch09_error_0909_02.rs  bk_ch09_error_0910.rs  bk_ch10_generic_1002.rs  bk_ch10_generic_1004.rs  bk_ch10_generic_1010.rs  bk_ch10_generic_1011.rs  bk_ch10_generic_1013_lib.rs  bk_ch10_generic_1014.rs  bk_ch10_generic_1014_2_trait_paremeter.rs  bk_ch10_generic_1015.rs  bk_ch13_iterator.rs  bk_ref-hashmap.rs  bk_type-1-infer.rs  bk_type-2-max-val-wrap.rs  bk_type-3-u8-byte-literals.rs  bk_type-5-integer-method.rs  bk_type-rc.rs
course.rs_practice.rs/: 030004.rs  030007.rs  030008.rs  030009.rs  040101.rs  040111.rs  040401.rs  040402.rs  050102.rs  050108.rs  050203.rs  060108.rs  060111-.rs  060112.rs  060402.rs  060503.rs  060504.rs  060505.rs  060603.rs  070004.rs  070008.rs  080102.rs  080103.rs  080104.rs  080106.rs  080109.rs  080202.rs  080205.rs  080206.rs  090000.rs  090001.rs  090003.rs  100102.rs  100103.rs  100202.rs  100309.rs  100402.rs  100503.rs  110102.rs  110104.rs  (+17 more)
course.rs_rust_by_practice/: 030006.rs  040103.rs  040105.rs  040109.rs  040110.rs  040204.rs  040205.rs  040300.rs  040301.rs  040303.rs  040405.rs  050109.rs  050204.rs  050206.rs  050210.rs  060101.rs  060106.rs  060109.rs  060203.rs  060301.rs  060401.rs  060405.rs  060501.rs  060502.rs  060506.rs  060508-.rs  070003.rs  080101.rs  080108.rs  080201.rs  090004.rs  100104.rs  100105.rs  100203.rs  100211.rs  100302.rs  100303.rs  100305.rs  100306.rs  100307.rs  (+23 more)
crate-main-lib-both-exist/: README.txt
crate_reqwest_demo1/: Cargo.toml
crate_reqwest_demo1/src/: main.rs
discussion-collections/: struct-item-move-then-add-loop-check.rs
ex_rbe_rust_by_example/: ex_01_2_2-display.rs  ex_01_2_2_1-testcase-list.rs  ex_01_2_3-formatting.rs  (+63 more)
rust-course-data/exercises/activities/: Cargo.toml
rust-course-data/exercises/clipstash/: Cargo.toml
rust-course-data/exercises/clipstash/migrations/: 20231219120146_api_key.sql
rust-course-data/exercises/clipstash/src/lib/: mod.rs
rust-course-data/exercises/clipstash/src/lib/data/: mod.rs  model.rs  query.rs
rust-course-data/exercises/clipstash/src/lib/domain/: maintenance.rs  mod.rs  time.rs
rust-course-data/exercises/clipstash/src/lib/domain/clip/: mod.rs
rust-course-data/exercises/clipstash/src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  mod.rs  password.rs  posted.rs  shortcode.rs  title.rs
rust-course-data/exercises/clipstash/src/lib/service/: action.rs  ask.rs  mod.rs
rust-course-data/exercises/clipstash/src/lib/web/: api.rs  ctx.rs  form.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
serde-crate-basic/: Cargo.toml
serde-crate-basic/src/: main.rs  serde-01.rs
tokio_study/: Cargo.toml  f5.txt
tokio_study/src/: t01hellotokio.rs  t02asyncawait.rs  t03tokiomain.rs  t04spawning.rs  t05spawning_con.rs  t06taskhandle.rs  t07spawnmove.rs  t08sendmove.rs  t09storevalue.rs  t10sharedstate.rs  t11channels.rs  t11channels1.rs  t11channels2.rs  t11channels3.rs  t12io1.rs
try_captcha_download/: Cargo.toml
try_captcha_download/src/: main.rs
try_captcha_process/: Cargo.toml  tesseract--print-parameters.txt
try_captcha_process/src/: main.rs
(+252 files in other folders)
