[package]
name = "bk_ch20_prj_webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "lis2001"
path = "src/lis2001.rs"

[[bin]]
name = "lis2002"
path = "src/lis2002.rs"

[[bin]]
name = "lis2003"
path = "src/lis2003.rs"

[[bin]]
name = "lis2005"
path = "src/lis2005.rs"

[[bin]]
name = "lis2006"
path = "src/lis2006.rs"

[[bin]]
name = "lis2007"
path = "src/lis2007.rs"

[[bin]]
name = "lis2009"
path = "src/lis2009.rs"
