[package]
name = "study-kyexpress-get-verification-imgs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = { version = "0.11.9", features =["blocking", "json"] }
reqwest = { version = "0.11.9", features = ["json"] }
#hyper = { version = "0.14", features = ["full"] }
#hyper-tls = "^0.5"
futures = "*"
tokio = { version = "1", features = ["full"] }
#html5ever = "0.25.1"
#kuchiki = "*"
serde = { version = "1", features = ["derive"] }
#serde_derive = "1"
serde_json = "1"
#serde_json = {version = "1", default-features = false, features = ["alloc"]}
base64 = "*"
#image-base64 = { version = "*", git = "https://github.com/iwatakeshi/image-base64-rs" }
image-base64 = { version = "*", path = "image-base64-rs" }
