[package]
name = "study-kyexpress-captcha-process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tesseract = "0.10.1"
image = "0.23.6"
#imageproc = { version = "0.22.0" , path = "imageproc" }
imageproc "0.22.0"
#palette = "0.6.0"
histo_fp = "*"