[package]
name = "activities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "activity"
path = "src/lib/activitylib.rs"


[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
humantime = "2.1.0"
thiserror = "1.0.50"

